--- a/nginx.conf
+++ b/nginx.conf
@@ -16,8 +16,8 @@ server {
 
     # Proxy API requests directly to the API gateway without the /api prefix
     location ~ ^/(auth|register|login|refresh|logout|users|yeets) {
-        # Direct proxy to API gateway
-        proxy_pass http://api-gateway:80;
+        # Direct proxy to API gateway - Updated service name
+        proxy_pass http://kong:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
